# data_analyze_agent

./: .env.example  .gitignore  README.md  pyproject.toml
ref/: project.md  project_demand.md
sample_data/: test_column_schema.json  test_dataset_full.csv
src/agent/: data_manager.py  decision_rules.py  graph.py  llm_orchestration.py  observer.py  state.py  utils.py
src/app/: agent_runner.py  config_loader.py  local_llm.py  mock_llm.py  streamlit_app.py
src/skills/cleaning/: dedup.py  missing.py  outlier.py  type_fix.py
src/skills/eda/: basic_stats.py  visualization.py
src/skills/feature_engineering/: encoding.py  feature_select.py  interaction.py  scaling.py  time_features.py
src/skills/modeling/: baseline.py  evaluation.py  mixed_effect.py
src/skills/profiling/: dataset_profile.py
src/skills/reporting/: artifacts.py
tests/: test_data_manager.py  test_decision_rules.py  test_llm_orchestration.py  test_mixed_effect.py  test_pipeline_smoke.py  test_profiling.py
